syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

option go_package = "exc8/pb";

package models;

// Messages

// todo implement messages
//
message Drink {
  uint64 id = 1;
  string name = 2;
  string desc = 3;
  uint64 price = 4;
}

message Order {
  uint64 amount = 1;
  uint64 DrinkId = 2;
}

message GetDrinksResponse {
  repeated Drink drinks = 1;
}

message GetOrdersResponse {
  repeated Order orders = 1;
}

message OrderRequest {
  uint64 drink_id = 1;
  uint64 amount = 2;
}

message OrderResponse {
  Order order = 1;
}


// Generate go files with:
// Execute `generate_pb.sh`

// Define the service
service OrderService {
  // todo define rpc functions
  // List available drinks
  rpc GetDrinks(google.protobuf.Empty) returns (GetDrinksResponse) {}
  // List all orders
  rpc GetOrders(google.protobuf.Empty) returns (GetOrdersResponse) {}
  // Place an order (one line: drink + amount)
  rpc OrderDrink(OrderRequest) returns (OrderResponse) {}  
}
